--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -75,11 +75,18 @@
 
     <div class="contact__div">
         <h2>Nous Contacter</h2>
-        <ul>
-            <li>06.14.06.26.94</li>
-            <li>lean_tech@centralelille.fr</li>
-            <li>http://www.leantech.fr/</li>
-        </ul>
+        <div>
+            <div class="contact_logo__div">
+                <img src="{{ asset('assets/images/logo-grey-nobg.png') }} " alt="logo">
+            </div>
+            <div class="contact_info__div">
+                <ul>
+                    <li><i class="icon mobile"></i> 06.14.06.26.94</li>
+                    <li><i class="icon envelope"></i> <a href="mailto:lean_tech@centralelille.fr">lean_tech@centralelille.fr</a></li>
+                    <li><i class="icon location arrow"></i> <a href="http://www.leantech.fr/">http://www.leantech.fr/</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 
