--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,92 +2,132 @@
 
 {% block body %}
 
-    <div class="title__div">
-        <div class="title_logo__div">
-            <img src="{{ asset('assets/images/logo-nobg.png') }} " alt="logo">
-        </div>
-        <div class="title_name__div">
-            <h1>LeanTech</h1>
-            <h2>Work Together !</h2>
-        </div>
-    </div>
+    <div class="main">
 
-    <div class="content__div projet__div">
-        <h2>Le Projet</h2>
-        <p>LeanTech est une equipe composee de trois élèves ingénieurs de 4eme annee, en specialite système
-            de l’information a l’Institut de Genie Informatique et Industriel (IG2I), Centrale Lille.
-            Le Projet de Fin d’Etude comporte une etude complete de vos besoins, ainsi que de la specification et
-            la realisation d’un prototype. C’est une etude de 230 heures par élèves soit 690 heures. Ce projet fera
-            l’objet d’une participation financie. </p>
-        <div class="projet_attentes__div">
-            <ul>
-                <li>Un cahier des charges détaillé</li>
-                <li>Un dossier de spécifications fonctionnelles</li>
-                <li>Une méthodologie de conduite de projet </li>
-                <li>Un plan qualité</li>
-                <li>Diagnostic, analyse, conseils</li>
-                <li>Une rédaction des spécifications</li>
-                <li>Une étude du marché</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="content__div objectif__div">
-        <h2>Nos Objectifs</h2>
-        <ul>
-            <li>Apporter nos connaissances pluridisciplinaires et notre expertise</li>
-            <li>Proposer une solution durable et fonctionnelle dans le temps</li>
-            <li>Avoir l’opportunite de collaborer avec une entreprise autour de la logistique</li>
-        </ul>
-
-        <img src="{{ asset('assets/images/timeline.png') }} " alt="timeline">
-    </div>
-
-    <div class="content__div equipe__div">
-        <h2>L’équipe</h2>
-        <p></p>
-    </div>
-
-
-    <div class="content__div formation__div">
-        <h2>Notre Formation</h2>
-        <div>
-            <div>
-                <h3>L'école</h3>
-                <p>L’IG2I propose une formation en apprentissage en trois ans. Cette formation nous oriente vers
-                    l’informatique d’entreprise et le génie logiciel.
-                    Alternant entre entreprise et e cole tout au long de ce cursus, chaque membre de l’equipe a des
-                    compétences variées et essentielles, comme la conception d’une base de données, d’une
-                    architecture réseau ou d’une application professionnelle.
-                    En plus des enseignements de matière industrielle, informatique et d’objet connectés.</p>
+        <div class="title__div">
+            <div class="title_logo__div">
+                <img src="{{ asset('assets/images/logo-nobg.png') }} " alt="logo">
             </div>
-
-            <div>
-                <h3>L'alternance</h3>
-                <p>En plus d’enrichir nos compétences, l'alternance nous octroie de nouvelles qualifications
-                    propres au secteur du travail. Ces nouvelles techniques, accompagne es d'une maturite liee aux
-                    responsabilites au sein des entreprises, font des alternants, des acteurs à la fois théoriques et
-                    pratiques, promptes à mener à bien les projets !</p>
+            <div class="title_name__div">
+                <h1>LeanTech</h1>
+                <h2>Work Together !</h2>
             </div>
         </div>
 
-    </div>
-
-    <div class="contact__div">
-        <h2>Nous Contacter</h2>
-        <div>
-            <div class="contact_logo__div">
-                <img src="{{ asset('assets/images/logo-grey-nobg.png') }} " alt="logo">
-            </div>
-            <div class="contact_info__div">
+        <div class="content__div projet__div">
+            <h2>Le Projet</h2>
+            <p>LeanTech est une equipe composee de trois élèves ingénieurs de 4eme annee, en specialite système
+                de l’information a l’Institut de Genie Informatique et Industriel (IG2I), Centrale Lille.
+                Le Projet de Fin d’Etude comporte une etude complete de vos besoins, ainsi que de la specification et
+                la realisation d’un prototype. C’est une etude de 230 heures par élèves soit 690 heures. Ce projet fera
+                l’objet d’une participation financie. </p>
+            <div class="projet_attentes__div">
                 <ul>
-                    <li><i class="icon mobile"></i> 06.14.06.26.94</li>
-                    <li><i class="icon envelope"></i> <a href="mailto:lean_tech@centralelille.fr">lean_tech@centralelille.fr</a></li>
-                    <li><i class="icon location arrow"></i> <a href="http://www.leantech.fr/">http://www.leantech.fr/</a></li>
+                    <li>Un cahier des charges détaillé</li>
+                    <li>Un dossier de spécifications fonctionnelles</li>
+                    <li>Une méthodologie de conduite de projet </li>
+                    <li>Un plan qualité</li>
+                    <li>Diagnostic, analyse, conseils</li>
+                    <li>Une rédaction des spécifications</li>
+                    <li>Une étude du marché</li>
                 </ul>
             </div>
         </div>
-    </div>
 
+        <div class="content__div objectif__div">
+            <h2>Nos Objectifs</h2>
+            <ul>
+                <li>Apporter nos connaissances pluridisciplinaires et notre expertise</li>
+                <li>Proposer une solution durable et fonctionnelle dans le temps</li>
+                <li>Avoir l’opportunite de collaborer avec une entreprise autour de la logistique</li>
+            </ul>
+
+            <img class="timeline__img" src="{{ asset('assets/images/timeline.png') }} " alt="timeline">
+        </div>
+
+        <div class="content__div equipe__div">
+            <h2>L’équipe</h2>
+            <div class="equipe_icons__div">
+                <div class="equipe_icon">
+                    <img class="avatar__img" src="{{ asset('assets/images/avatar-nobg.png') }} " alt="avatar">
+                    <h4>Baptiste Pautrat</h4>
+                    <p>Chef de Projet & Ingenieur technique</p>
+                    <p>En alternance chez BBGR</p>
+                </div>
+                <div class="equipe_icon">
+                    <img class="avatar__img" src="{{ asset('assets/images/avatar-nobg.png') }} " alt="avatar">
+                    <h4>Victorine Doral</h4>
+                    <p>Responsable Qualite & Ingenieur technique</p>
+                    <p>En alternance chez Jouve</p>
+                </div>
+                <div class="equipe_icon">
+                    <img class="avatar__img" src="{{ asset('assets/images/avatar-nobg.png') }} " alt="avatar">
+                    <h4>Gaston Deseine</h4>
+                    <p>Responsable Fonctionnel & Ingenieur technique</p>
+                    <p>En alternance chez Renault</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="content__div formation__div">
+            <h2>Notre Formation</h2>
+            <div class="formation_rounded__div">
+                <div>
+                    <h3>L'école</h3>
+                    <p>L’IG2I propose une formation en apprentissage en trois ans. Cette formation nous oriente vers
+                        l’informatique d’entreprise et le génie logiciel.
+                        Alternant entre entreprise et e cole tout au long de ce cursus, chaque membre de l’equipe a des
+                        compétences variées et essentielles, comme la conception d’une base de données, d’une
+                        architecture réseau ou d’une application professionnelle.
+                        En plus des enseignements de matière industrielle, informatique et d’objet connectés.</p>
+                    <div class="ecole_icons__div">
+                        <div class="ecole_icon">
+                            <i class="icon globe"></i>
+                            <p>14 semaines de stage à l’international</p>
+                        </div>
+
+                        <div class="ecole_icon">
+                            <i class="icon suitcase"></i>
+                            <p>24 mois en entreprise</p>
+                        </div>
+
+                        <div class="ecole_icon">
+                            <i class="icon graduation cap"></i>
+                            <p>Diplômé certifié par la CTI</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div>
+                    <h3>L'alternance</h3>
+                    <p>En plus d’enrichir nos compétences, l'alternance nous octroie de nouvelles qualifications
+                        propres au secteur du travail. Ces nouvelles techniques, accompagne es d'une maturite liee aux
+                        responsabilites au sein des entreprises, font des alternants, des acteurs à la fois théoriques et
+                        pratiques, promptes à mener à bien les projets !</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="contact__div">
+            <h2>Nous Contacter</h2>
+            <div>
+                <div class="contact_logo__div">
+                    <img src="{{ asset('assets/images/logo-grey-nobg.png') }} " alt="logo">
+                </div>
+                <div class="contact_info__div">
+                    <ul>
+                        <li><i class="icon mobile"></i> 06.14.06.26.94</li>
+                        <li><i class="icon envelope"></i> <a href="mailto:lean_tech@centralelille.fr">lean_tech@centralelille.fr</a></li>
+                        <li><i class="icon location arrow"></i> <a href="http://www.leantech.fr/">http://www.leantech.fr/</a></li>
+                    </ul>
+                    <h2 class="slogan__h2">LeanTech Work Together !</h2>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
