--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 /* main */
 
 body {
-    background-color: #525659;
+    background-color: #FFFFFF;
     font-size: 120%;
 }
 
@@ -18,21 +18,33 @@ h2 {
 /* title */
 
 .title__div {
-    margin: 0 -40px 40px -40px;
+    /*margin: 0 -40px 40px -40px;*/
+    margin: 0 calc(-20vw - 40px) 0 calc(-20vw - 40px);
     background-color: #D9D9D9;
+
+    /*height: 100vh;*/
 
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    /*align-items: center;*/
+}
+
+.title__div .menu {
+    background-color: white;
+    height: fit-content;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 60vw !important;
 }
 
 .title__div > .title_logo__div{
-    margin-left: 10%;
-    flex: 30%;
+    /*margin-left: 10%;*/
+    /*flex: 10%;*/
 }
 
 .title__div > .title_name__div{
-    flex: 50%;
+    /*flex: 50%;*/
     line-height: 0;
 }
 
