--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -12,9 +12,16 @@
                 <h1>LeanTech</h1>
                 <h2>Work Together !</h2>
             </div>
+            <div class="ui five item menu">
+                    <a class="item" href="#Projet">Le projet</a>
+                    <a class="item" href="#Objectif">L'objectif</a>
+                    <a class="item" href="#Equipe">L'equipe</a>
+                    <a class="item" href="#Formation">La formation</a>
+                    <a class="item" href="#Contact">Nous contacter</a>
+            </div>
         </div>
 
-        <div class="content__div projet__div">
+        <div id="Projet" class="content__div projet__div">
             <h2>Le Projet</h2>
             <p>LeanTech est une equipe composee de trois élèves ingénieurs de 4eme annee, en specialite système
                 de l’information a l’Institut de Genie Informatique et Industriel (IG2I), Centrale Lille.
@@ -34,7 +41,7 @@
             </div>
         </div>
 
-        <div class="content__div objectif__div">
+        <div id="Objectif" class="content__div objectif__div">
             <h2>Nos Objectifs</h2>
             <ul>
                 <li>Apporter nos connaissances pluridisciplinaires et notre expertise</li>
@@ -45,7 +52,7 @@
             <img class="timeline__img" src="{{ asset('assets/images/timeline.png') }} " alt="timeline">
         </div>
 
-        <div class="content__div equipe__div">
+        <div id="Equipe" class="content__div equipe__div">
             <h2>L’équipe</h2>
             <div class="equipe_icons__div">
                 <div class="equipe_icon">
@@ -70,7 +77,7 @@
         </div>
 
 
-        <div class="content__div formation__div">
+        <div id="Formation" class="content__div formation__div">
             <h2>Notre Formation</h2>
             <div class="formation_rounded__div">
                 <div>
@@ -112,7 +119,7 @@
 
         </div>
 
-        <div class="contact__div">
+        <div id="Contact" class="contact__div">
             <h2>Nous Contacter</h2>
             <div>
                 <div class="contact_logo__div">
