--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <div class="main">
+    <div class="main" id="Accueil">
 
         <div class="title__div">
             <div class="title_logo__div">
@@ -12,12 +12,13 @@
                 <h1>LeanTech</h1>
                 <h2>Work Together !</h2>
             </div>
-            <div class="ui five item menu">
-                    <a class="item" href="#Projet">Le projet</a>
-                    <a class="item" href="#Objectif">L'objectif</a>
-                    <a class="item" href="#Equipe">L'equipe</a>
-                    <a class="item" href="#Formation">La formation</a>
-                    <a class="item" href="#Contact">Nous contacter</a>
+            <div class="ui six item menu">
+                <a class="item" href="#Accueil">Accueil</a>
+                <a class="item" href="#Projet">Le projet</a>
+                <a class="item" href="#Objectif">L'objectif</a>
+                <a class="item" href="#Equipe">L'equipe</a>
+                <a class="item" href="#Formation">La formation</a>
+                <a class="item" href="#Contact">Nous contacter</a>
             </div>
         </div>
 
