--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24,6 +24,7 @@ h2 {
     margin: 0 calc(-20vw - 40px) 0 calc(-20vw - 40px);
     background-color: #D9D9D9;
     border-radius: 0 0 10px 10px;
+    box-shadow: 10px 5px 5px grey;
 
     /*height: 100vh;*/
 
@@ -80,6 +81,7 @@ h2 {
 .projet__div .projet_attentes__div {
     background-color: #1E376C;
     color: white;
+    box-shadow: 10px 5px 5px grey;
     padding: 10px;
     border-radius: 20px;
     margin: 0 10px 0 10px;
@@ -138,6 +140,7 @@ h2 {
     background-color: #F7F7F7;
     padding: 20px;
     border-radius: 30px;
+    box-shadow: 10px 5px 5px grey;
 }
 
 
