Add action button + gradient

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -11,6 +11,12 @@
             <div class="title_name__div">
                 <h1>LeanTech</h1>
                 <h2>Work Together !</h2>
+
+                <hr>
+                <div class="actions button">
+                    <button onclick="location.href='#Projet';" class="ui button">Notre projet</button>
+                    <button class="ui green button">Notre maquette</button>
+                </div>
             </div>
             <div class="ui six item menu">
                 <a class="item" href="#Accueil">Accueil</a>
