--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22,15 +22,20 @@ h2 {
 .title__div {
     /*margin: 0 -40px 40px -40px;*/
     margin: 0 calc(-20vw - 40px) 0 calc(-20vw - 40px);
-    background-color: #D9D9D9;
+    /*background-color: #D9D9D9;*/
     border-radius: 0 0 10px 10px;
-    box-shadow: 10px 5px 5px grey;
 
-    /*height: 100vh;*/
+    background: rgb(166,166,166);
+    background: linear-gradient(185deg, rgba(166,166,166,1) 0%, rgba(231,231,231,1) 27%, rgba(255,255,254,1) 100%);
+
+    /*border-radius: 0 0 5% 0;*/
+    /*box-shadow: 10px 5px 5px grey;*/
+
+    height: 100vh;
 
     display: flex;
     flex-wrap: wrap;
-    /*align-items: center;*/
+    align-items: center;
 }
 
 .title__div .menu {
@@ -38,18 +43,19 @@ h2 {
     height: fit-content;
     position: fixed;
     top: 0;
-    right: 0;
+    right: 20px;
     width: 60vw !important;
 }
 
 .title__div > .title_logo__div{
-    /*margin-left: 10%;*/
+    margin-left: 10%;
     /*flex: 10%;*/
 }
 
 .title__div > .title_name__div{
     /*flex: 50%;*/
     line-height: 0;
+    margin-left: 70px;
 }
 
 .title__div .title_name__div h1{
@@ -64,12 +70,21 @@ h2 {
     margin-top: 0;
 }
 
+.title__div .actions {
+    display: flex;
+}
+
+.title__div button {
+    width: 100%;
+}
+
 /* Content */
 
 
 
 .content__div {
-    margin-top: 45px;
+    /*margin-top: 150px;*/
+    padding-top: 110px;
 }
 
 .content__div h1{
