--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -6,7 +6,7 @@
 
         <div class="title__div">
             <div class="title_logo__div">
-                <img src="{{ asset('assets/images/logo-nobg.png') }} " alt="logo">
+                <img src="{{ asset('assets/images/logo-grey-nobg.png') }} " alt="logo">
             </div>
             <div class="title_name__div">
                 <h1>LeanTech</h1>
@@ -15,7 +15,7 @@
                 <hr>
                 <div class="actions button">
                     <button onclick="location.href='#Projet';" class="ui button">Notre projet</button>
-                    <button class="ui green button">Notre maquette</button>
+                    <button class="ui button" style="background: #6899DE; color: white">Notre maquette</button>
                 </div>
             </div>
             <div class="ui six item menu">
@@ -56,7 +56,7 @@
                 <li>Avoir l’opportunite de collaborer avec une entreprise autour de la logistique</li>
             </ul>
 
-            <img class="timeline__img" src="{{ asset('assets/images/timeline.png') }} " alt="timeline">
+            <img class="timeline__img" src="{{ asset('assets/images/timeline-nobg.png') }} " alt="timeline">
         </div>
 
         <div id="Equipe" class="content__div equipe__div">
@@ -123,7 +123,6 @@
                         pratiques, promptes à mener à bien les projets !</p>
                 </div>
             </div>
-
         </div>
 
         <div id="Contact" class="contact__div">
