--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,11 +13,19 @@ body {
 }
 
 .dark-bg {
+    background: #f1f1f1;
 
+    margin: 0 calc(-15vw - 40px) 0 calc(-15vw - 40px);
 }
 
 .light-bg {
+    background: #FBFBFA;
 
+    margin: 0 calc(-15vw - 40px) 0 calc(-15vw - 40px);
+}
+
+h3 {
+    font-size: 1.5em;
 }
 
 /* title */
@@ -94,6 +102,7 @@ body {
 
 
 .content__div {
+    margin: 0 15vw 0 15vw;
     /*margin-top: 150px;*/
     padding-top: 100px;
     padding-bottom: 100px;
@@ -124,6 +133,7 @@ body {
 .projet__div .projet_attentes__div ul{
     list-style: none;
     column-count: 2;
+    font-weight: bold;
 }
 
 .projet__div .projet_attentes__div ul li::before {
@@ -155,12 +165,24 @@ body {
 }
 
 .equipe_icons__div > .equipe_icon {
+    background: #FBFBFA;
+    margin-left: 40px;
+    margin-bottom: 40px;
+    border-radius: 5%;
+    padding: 15px;
+    height: 300px;
     flex: 25%;
 }
 
 .equipe_icons__div > .equipe_icon > h4 {
     margin-top: 0;
     color: #6683AD;
+    font-size: 1em;
+}
+
+.equipe_icons__div > .equipe_icon > p {
+    color: #222222;
+    font-size: 0.8em;
 }
 
 .equipe_icon .avatar__img{
@@ -171,15 +193,15 @@ body {
 /* Formation */
 
 .formation__div .formation_rounded__div {
-    background-color: #F7F7F7;
+    /*background-color: #F7F7F7;*/
     padding: 40px;
     border-radius: 30px;
-    box-shadow: 10px 5px 5px grey;
+    /*box-shadow: 10px 5px 5px grey;*/
 }
 
 
 .ecole_icons__div {
-    margin: 40px 0 40px 0;
+    margin: 60px 0 60px 0;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -205,9 +227,10 @@ body {
 
 
 .contact__div {
-    padding: 10px 5px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     /*background-color: #B4C2D6;*/
-    margin: 40px -40px 0 -40px;
+    /*margin: 40px -40px 0 -40px;*/
 }
 
 
@@ -236,6 +259,20 @@ body {
     font-size: 1.7em;
     color: #6683AD;
     text-decoration: none;
-    margin: -12px 0 0 24vw;
+    margin: -12px 0 0 37vw;
 }
 
+@media screen and (max-width: 1100px) {
+    .main {
+        margin: 0 0 0 0;
+    }
+
+    .title__div {
+        height: auto;
+        padding-top: 30px;
+    }
+
+    .projet__div .projet_attentes__div ul{
+        column-count: 1;
+    }
+}
