--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <title>{% block title %}LeanTech{% endblock %}</title>
         <link rel="icon" type="image/png" href="{{ asset('assets/images/logo-nobg.png') }}" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
