--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -18,7 +18,7 @@
                     <button class="ui button" style="background: #6899DE; color: white">Notre maquette</button>
                 </div>
             </div>
-            <div class="ui six item menu">
+            <div class="ui six item stackable menu">
                 <a class="item" href="#Accueil">Accueil</a>
                 <a class="item" href="#Projet">Le projet</a>
                 <a class="item" href="#Objectif">L'objectif</a>
