--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -6,7 +6,7 @@
 
         <div class="title__div">
             <div class="title_logo__div">
-                <img src="{{ asset('assets/images/logo-grey-nobg.png') }} " alt="logo">
+                <img src="{{ asset('assets/images/logo-nobg.png') }} " alt="logo">
             </div>
             <div class="title_name__div">
                 <h1>LeanTech</h1>
@@ -15,7 +15,7 @@
                 <hr>
                 <div class="actions button">
                     <button onclick="location.href='#Projet';" class="ui button">Notre projet</button>
-                    <button class="ui button" style="background: #6899DE; color: white">Notre maquette</button>
+                    <button class="ui button" style="background: #137BDA; color: white">Notre maquette</button>
                 </div>
             </div>
             <div class="ui six item stackable menu">
@@ -138,7 +138,7 @@
                 <h2>Nous Contacter</h2>
                 <div>
                     <div class="contact_logo__div">
-                        <img src="{{ asset('assets/images/logo-grey-nobg.png') }} " alt="logo">
+                        <img src="{{ asset('assets/images/logo-nobg.png') }} " alt="logo">
                     </div>
                     <div class="contact_info__div">
                         <ul>
