--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -14,8 +14,8 @@
 
                 <hr>
                 <div class="actions button">
-                    <button onclick="location.href='#Projet';" class="ui button">Notre projet</button>
-                    <button class="ui button" style="background: #137BDA; color: white">Notre maquette</button>
+                    <button onclick="location.href='#Projet';" class="ui projet__button button">Notre projet</button>
+                    <button class="ui plaquette__button button">Notre maquette</button>
                 </div>
             </div>
             <div class="ui six item stackable menu">
