--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -31,11 +31,11 @@
         <div class="dark-bg">
             <div id="Projet" class="content__div projet__div" data-aos="fade-in">
                 <h2>Le Projet</h2>
-                <p>LeanTech est une equipe composee de trois élèves ingénieurs de 4eme annee, en specialite système
-                    de l’information a l’Institut de Genie Informatique et Industriel (IG2I), Centrale Lille.
-                    Le Projet de Fin d’Etude comporte une etude complete de vos besoins, ainsi que de la specification et
-                    la realisation d’un prototype. C’est une etude de 230 heures par élèves soit 690 heures. Ce projet fera
-                    l’objet d’une participation financie. </p>
+                <p>LeanTech est une equipe composee de trois élèves ingénieurs de 4eme annee,
+                    en specialite système de l’information a au seins de l’ecole d’ingenieur Centrale Lille,
+                    genie informatique et industriel. Le Projet de Fin d’Etude comporte une etude complete de vos besoins,
+                    ainsi que de la specification et la realisation d’un prototype.
+                    Cette etude de 230 heures par élèves soit 690 heures fera l’objet d’un financement par notre partenaire entreprise.. </p>
                 <div class="projet_attentes__div">
                     <ul>
                         <li>Un cahier des charges détaillé</li>
@@ -56,7 +56,8 @@
                 <ul>
                     <li>Apporter nos connaissances pluridisciplinaires et notre expertise</li>
                     <li>Proposer une solution durable et fonctionnelle dans le temps</li>
-                    <li>Avoir l’opportunite de collaborer avec une entreprise autour de la logistique</li>
+                    <li>Avoir l’opportunite de collaborer avec une entreprise autour de la Supply chain Management
+                        et logistique</li>
                 </ul>
 
                 <img class="timeline__img" src="{{ asset('assets/images/timeline-nobg.png') }} " alt="timeline">
@@ -96,12 +97,13 @@
                 <div class="formation_rounded__div">
                     <div>
                         <h3>L'école</h3>
-                        <p>L’IG2I propose une formation en apprentissage en trois ans. Cette formation nous oriente vers
-                            l’informatique d’entreprise et le génie logiciel.
-                            Alternant entre entreprise et e cole tout au long de ce cursus, chaque membre de l’equipe a des
-                            compétences variées et essentielles, comme la conception d’une base de données, d’une
-                            architecture réseau ou d’une application professionnelle.
-                            En plus des enseignements de matière industrielle, informatique et d’objet connectés.</p>
+                        <p>Centrale Lille IG2I propose une formation en apprentissage en trois ans.
+                            Cette formation nous oriente vers l’informatique d’entreprise et le génie logiciel.
+                            Alternant entre entreprise et ecole tout au long de ce cursus,
+                            chaque membre de l’equipe a des compétences variées et essentielles,
+                            comme la gestion de projet, un travail sur les ERPs,
+                            d’une architecture réseau ou d’une application professionnelle.
+                            Ainsi que l’enseignement de matières industrielles tel que l’automatique, la robotique ...</p>
                         <div class="ecole_icons__div">
                             <div class="ecole_icon">
                                 <i class="icon globe"></i>
@@ -124,10 +126,11 @@
 
                     <div>
                         <h3>L'alternance</h3>
-                        <p>En plus d’enrichir nos compétences, l'alternance nous octroie de nouvelles qualifications
-                            propres au secteur du travail. Ces nouvelles techniques, accompagne es d'une maturite liee aux
-                            responsabilites au sein des entreprises, font des alternants, des acteurs à la fois théoriques et
-                            pratiques, promptes à mener à bien les projets !</p>
+                        <p>En plus d’enrichir nos compétences, l'alternance nous octroie de nouvelles
+                            qualifications propres au secteur du travail. Ces nouvelles techniques,
+                            accompagnees d'une maturite liee aux responsabilites au sein des entreprises,
+                            font des alternants,
+                            des acteurs à la fois théoriques et pratiques, promptes à mener à bien les projets !</p>
                     </div>
                 </div>
             </div>
