--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -18,8 +18,8 @@
                     <button class="ui plaquette__button button">Notre maquette</button>
                 </div>
             </div>
-            <div class="ui six item stackable menu">
-                <a class="item" onclick="scrollToId('#Accueil')">Accueil</a>
+            <div class="ui fluid six item stackable menu">
+                <a class="item" onclick="scrollToId('#Accueil')"{#  data-tooltip="Accueil" data-position="bottom center"#}></a>
                 <a class="item" onclick="scrollToId('#Projet')">Le projet</a>
                 <a class="item" onclick="scrollToId('#Objectif')">L'objectif</a>
                 <a class="item" onclick="scrollToId('#Equipe')">L'equipe</a>
