--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -31,11 +31,11 @@
         <div class="dark-bg">
             <div id="Projet" class="content__div projet__div" data-aos="fade-in">
                 <h2>Le Projet</h2>
-                <p>LeanTech est une equipe composee de trois élèves ingénieurs de 4eme annee,
-                    en specialite système de l’information a au seins de l’ecole d’ingenieur Centrale Lille,
-                    genie informatique et industriel. Le Projet de Fin d’Etude comporte une etude complete de vos besoins,
+                <p><b> LeanTech</b> est une equipe composee de  <b> trois élèves ingénieurs </b> de 4eme annee,
+                    en specialite <b>  système de l’information  </b> à au seins de l’ecole d’ingenieur <b>  Centrale Lille </b>,
+                    genie informatique et industriel. <b> Le Projet de Fin d’Etude </b> comporte une etude complete de vos besoins,
                     ainsi que de la specification et la realisation d’un prototype.
-                    Cette etude de 230 heures par élèves soit 690 heures fera l’objet d’un financement par notre partenaire entreprise.. </p>
+                    Cette etude  <b> de 230 heures par élèves soit 690 heures  <b> fera l’objet d’un financement par notre partenaire entreprise.. </p>
                 <div class="projet_attentes__div">
                     <ul>
                         <li>Un cahier des charges détaillé</li>
@@ -54,10 +54,9 @@
             <div id="Objectif" class="content__div objectif__div" data-aos="fade-in">
                 <h2>Nos Objectifs</h2>
                 <ul>
-                    <li>Apporter nos connaissances pluridisciplinaires et notre expertise</li>
-                    <li>Proposer une solution durable et fonctionnelle dans le temps</li>
-                    <li>Avoir l’opportunite de collaborer avec une entreprise autour de la Supply chain Management
-                        et logistique</li>
+                    <li>Apporter nos connaissances  <b> pluridisciplinaires </b>  et notre <b> expertise </b></li>
+                    <li>Proposer une solution <b>  durable et fonctionnelle dans le temps</b> </li>
+                    <li>Avoir l’opportunite de collaborer avec une entreprise autour de la <b>  Supply chain Management et logistique </b></li>
                 </ul>
 
                 <img class="timeline__img" src="{{ asset('assets/images/timeline-nobg.png') }} " alt="timeline">
@@ -98,12 +97,12 @@
                     <div>
                         <h3>L'école</h3>
                         <p>Centrale Lille IG2I propose une formation en apprentissage en trois ans.
-                            Cette formation nous oriente vers l’informatique d’entreprise et le génie logiciel.
+                            Cette formation nous oriente vers <b> l’informatique d’entreprise et le génie logiciel</b>.
                             Alternant entre entreprise et ecole tout au long de ce cursus,
-                            chaque membre de l’equipe a des compétences variées et essentielles,
-                            comme la gestion de projet, un travail sur les ERPs,
-                            d’une architecture réseau ou d’une application professionnelle.
-                            Ainsi que l’enseignement de matières industrielles tel que l’automatique, la robotique ...</p>
+                            chaque membre de l’equipe a  <b> des compétences variées et essentielles </b>,
+                            comme  <b> la gestion de projet </b>, un travail sur <b> les ERPs ,
+                            d’une architecture réseau  </b> ou  <b> d’une application professionnelle </b>.
+                            Ainsi que l’enseignement de <b>  matières industrielles </b> tel que l’automatique, la robotique ...</p>
                         <div class="ecole_icons__div">
                             <div class="ecole_icon">
                                 <i class="icon globe"></i>
@@ -126,11 +125,11 @@
 
                     <div>
                         <h3>L'alternance</h3>
-                        <p>En plus d’enrichir nos compétences, l'alternance nous octroie de nouvelles
-                            qualifications propres au secteur du travail. Ces nouvelles techniques,
+                        <p>En plus <b> d’enrichir nos compétences </b>, l'alternance nous octroie de  <b> nouvelles
+                            qualifications propres </b> au secteur du travail. Ces nouvelles techniques,
                             accompagnees d'une maturite liee aux responsabilites au sein des entreprises,
                             font des alternants,
-                            des acteurs à la fois théoriques et pratiques, promptes à mener à bien les projets !</p>
+                            <b>des acteurs à la fois théoriques et pratiques, promptes à mener à bien les projets !</b> </p>
                     </div>
                 </div>
             </div>
