--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
         <title>{% block title %}LeanTech{% endblock %}</title>
         <link rel="icon" type="image/png" href="{{ asset('assets/images/logo-nobg.png') }}" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Righteous&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Vollkorn:ital,wght@1,800;1,900&display=swap" rel="stylesheet">
         {% block stylesheets %}
 {#            {{ encore_entry_link_tags('app') }}#}
             <link rel="stylesheet" type="text/css" href="{{ asset('assets/libraries/semantic-ui/semantic.min.css') }}">
