--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -35,7 +35,7 @@
                     en specialite <b>  système de l’information  </b> à au seins de l’ecole d’ingenieur <b>  Centrale Lille </b>,
                     genie informatique et industriel. <b> Le Projet de Fin d’Etude </b> comporte une etude complete de vos besoins,
                     ainsi que de la specification et la realisation d’un prototype.
-                    Cette etude  <b> de 230 heures par élèves soit 690 heures  <b> fera l’objet d’un financement par notre partenaire entreprise.. </p>
+                    Cette etude  <b> de 230 heures par élèves soit 690 heures  </b> fera l’objet d’un financement par notre entreprise partenaire. </p>
                 <div class="projet_attentes__div">
                     <ul>
                         <li>Un cahier des charges détaillé</li>
