--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -96,7 +96,7 @@ h3 {
 .title__div .title_name__div h1{
     /*color: #00327A;*/
     color: #00337B;
-    font-family: 'Lobster', cursive;
+    font-family: 'Vollkorn', serif;
     font-size: 4.5em;
     margin-bottom: 0;
 }
@@ -292,7 +292,7 @@ h3 {
     color: #00337B;
     text-decoration: none;
     margin: -12px 0 0 37vw;
-    font-family: 'Lobster', cursive;
+    font-family: 'Vollkorn', serif;
 }
 
 @media screen and (max-width: 1100px) {
