--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -95,6 +95,7 @@
                 <h2>Notre Formation</h2>
                 <div class="formation_rounded__div">
                     <div>
+                        <img class="centale__img" src="{{ asset('assets/images/centrale-nobg.png') }} " alt="centrale">
                         <h3>L'école</h3>
                         <p>Centrale Lille IG2I propose une formation en apprentissage en trois ans.
                             Cette formation nous oriente vers <b> l’informatique d’entreprise et le génie logiciel</b>.
