--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -18,13 +18,15 @@
                     <button class="ui plaquette__button button">Notre maquette</button>
                 </div>
             </div>
-            <div class="ui fluid six item stackable menu">
-                <a class="item" onclick="scrollToId('#Accueil')"{#  data-tooltip="Accueil" data-position="bottom center"#}></a>
-                <a class="item" onclick="scrollToId('#Projet')">Le projet</a>
-                <a class="item" onclick="scrollToId('#Objectif')">L'objectif</a>
-                <a class="item" onclick="scrollToId('#Equipe')">L'equipe</a>
-                <a class="item" onclick="scrollToId('#Formation')">La formation</a>
-                <a class="item" onclick="scrollToId('#Contact')">Nous contacter</a>
+            <div class="ui fluid borderless menu">
+                <a class="item menu__logo" onclick="scrollToId('#Accueil')"{#  data-tooltip="Accueil" data-position="bottom center"#}></a>
+                <div class="right menu">
+                    <a class="item" onclick="scrollToId('#Projet')">Le projet</a>
+                    <a class="item" onclick="scrollToId('#Objectif')">L'objectif</a>
+                    <a class="item" onclick="scrollToId('#Equipe')">L'equipe</a>
+                    <a class="item" onclick="scrollToId('#Formation')">La formation</a>
+                    <a class="item" onclick="scrollToId('#Contact')">Nous contacter</a>
+                </div>
             </div>
         </div>
 
