--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,20 +8,20 @@ body {
 
 .main {
     background-color: #D9D9D9;
-    margin: 0 15vw 0 15vw;
-    padding: 0 40px 0 40px;
+    /*margin: 0 15vw 0 15vw;*/
+    /*padding: 0 40px 0 40px;*/
 }
 
 .dark-bg {
     background: #f1f1f1;
 
-    margin: 0 calc(-15vw - 40px) 0 calc(-15vw - 40px);
+    /*margin: 0 calc(-15vw - 40px) 0 calc(-15vw - 40px);*/
 }
 
 .light-bg {
     background: #FBFBFA;
 
-    margin: 0 calc(-15vw - 40px) 0 calc(-15vw - 40px);
+    /*margin: 0 calc(-15vw - 40px) 0 calc(-15vw - 40px);*/
 }
 
 h3 {
@@ -39,7 +39,7 @@ h3 {
 
 .title__div {
     /*margin: 0 -40px 40px -40px;*/
-    margin: 0 calc(-15vw - 40px) 0 calc(-15vw - 40px);
+    /*margin: 0 calc(-15vw - 40px) 0 calc(-15vw - 40px);*/
     /*background-color: #D9D9D9;*/
     border-radius: 0 0 10px 10px;
 
@@ -82,7 +82,7 @@ h3 {
 
 
 .title__div > .title_logo__div{
-    margin-left: 10%;
+    margin-left: 10vw;
     /*flex: 10%;*/
 }
 
@@ -198,7 +198,7 @@ h3 {
     margin-bottom: 40px;
     border-radius: 5%;
     padding: 15px;
-    height: 300px;
+    height: fit-content; /*400px;*/
     flex: 25%;
 }
 
@@ -300,7 +300,7 @@ h3 {
     font-family: 'Vollkorn', serif;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
     .main {
         margin: 0 0 0 0;
     }
@@ -311,7 +311,7 @@ h3 {
     }
 
     .title__div .title_name__div h1 {
-        font-size: 3.5em;
+        font-size: 2.5em;
     }
 
     .menu {
@@ -319,7 +319,7 @@ h3 {
     }
 
     .content__div{
-        margin: 0 20vw 0 20vw;
+        margin: 0 5vw 0 5vw;
     }
 
     .equipe_icon {
@@ -347,12 +347,24 @@ h3 {
 
     .contact_info__div{
         text-align: center;
-        margin-left: 15vw;
+        /*margin-left: 15vw;*/
         font-size: 0.7em;
     }
 }
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 650px) {
+    .title__div {
+        text-align: center;
+        display: block;
+    }
 
+    .title__div > .title_name__div{
+        margin-left: 0;
+    }
+
+    .title__div {
+        height: fit-content;
+        padding-top: 0;
+    }
 }
