--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -104,7 +104,7 @@
                             Alternant entre entreprise et ecole tout au long de ce cursus,
                             chaque membre de l’equipe a  <b> des compétences variées et essentielles </b>,
                             comme  <b> la gestion de projet </b>, un travail sur <b> les ERPs ,
-                            d’une architecture réseau  </b> ou  <b> d’une application professionnelle </b>.
+                                d’une architecture réseau  </b> ou  <b> d’une application professionnelle </b>.
                             Ainsi que l’enseignement de <b>  matières industrielles </b> tel que l’automatique, la robotique ...</p>
                         <div class="ecole_icons__div">
                             <div class="ecole_icon">
@@ -129,7 +129,7 @@
                     <div>
                         <h3>L'alternance</h3>
                         <p>En plus <b> d’enrichir nos compétences </b>, l'alternance nous octroie de  <b> nouvelles
-                            qualifications propres </b> au secteur du travail. Ces nouvelles techniques,
+                                qualifications propres </b> au secteur du travail. Ces nouvelles techniques,
                             accompagnees d'une maturite liee aux responsabilites au sein des entreprises,
                             font des alternants,
                             <b>des acteurs à la fois théoriques et pratiques, promptes à mener à bien les projets !</b> </p>
@@ -141,20 +141,36 @@
         <div class="dark-bg">
             <div id="Contact" class="contact__div" data-aos="fade-in">
                 <h2>Nous Contacter</h2>
-                <div>
+                {#<div>
                     <div class="contact_logo__div">
                         <img src="{{ asset('assets/images/logo-nobg.png') }} " alt="logo">
-                    </div>
-                    <div class="contact_info__div">
-                        <ul>
-                            <li><i class="icon mobile"></i> 06.14.06.26.94</li>
-                            <li><i class="icon envelope"></i> <a href="mailto:lean_tech@centralelille.fr">lean_tech@centralelille.fr</a></li>
-                            <li><i class="icon location arrow"></i> <a href="http://www.leantech.fr/">http://www.leantech.fr/</a></li>
-                        </ul>
-                    </div>
+                    </div>#}
+                <div class="contact_info__div">
+                    <ul>
+                        <li>
+                            <i class="icon mobile"></i>
+                            <h5>Téléphone</h5>
+                            <p> +33 6 14 06 26 94</p>
+                        </li>
+                        <li>
+                            <i class="icon envelope"></i>
+                            <h5>Mail</h5>
+                            <p> <a href="mailto:lean_tech@centralelille.fr">lean_tech@centralelille.fr</a></p>
+                        </li>
+                        <li>
+                            <img class="centale_contact__img" src="{{ asset('assets/images/centrale-nobg.png') }} " alt="centrale">
+                            <h5>Adresse</h5>
+                            <p> 13 rue Jean Souvraz, 62300 Lens</p>
+                            <p> +33 (0)3 21 74 85 85</p>
+                        </li>
+                    </ul>
                 </div>
-                <h2 class="slogan__h2">LeanTech Work Together !</h2>
+                {#                </div>#}
+
             </div>
+        </div>
+        <div class="light-bg">
+            <h2 class="slogan__h2">LeanTech Work Together !</h2>
         </div>
     </div>
 
