--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -58,12 +58,17 @@ h3 {
 
 .title__div .ui.menu {
     background-color: white;
+    font-size: 0.7em;
     color: black;
     height: 50px;
     position: fixed;
     top: 0;
     margin: 0;
     z-index: 100;
+}
+
+.title__div .right.menu {
+    margin-right: 10vw
 }
 
 .title__div .ui.menu .menu__logo, .title__div .ui.menu .menu__logo:hover {
