--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -21,6 +21,7 @@
             <div class="ui fluid borderless menu">
                 <a class="item menu__logo" onclick="scrollToId('#Accueil')"{#  data-tooltip="Accueil" data-position="bottom center"#}></a>
                 <div class="right menu">
+                    <a class="item" onclick="scrollToId('#Accueil')">Accueil</a>
                     <a class="item" onclick="scrollToId('#Projet')">Le projet</a>
                     <a class="item" onclick="scrollToId('#Objectif')">L'objectif</a>
                     <a class="item" onclick="scrollToId('#Equipe')">L'equipe</a>
@@ -97,7 +98,7 @@
                 <h2>Notre Formation</h2>
                 <div class="formation_rounded__div">
                     <div>
-                        <img class="centale__img" src="{{ asset('assets/images/centrale-nobg.png') }} " alt="centrale">
+                        <img class="centrale__img" src="{{ asset('assets/images/centrale-nobg.png') }} " alt="centrale">
                         <h3>L'école</h3>
                         <p>Centrale Lille IG2I propose une formation en apprentissage en trois ans.
                             Cette formation nous oriente vers <b> l’informatique d’entreprise et le génie logiciel</b>.
@@ -158,7 +159,7 @@
                             <p> <a href="mailto:lean_tech@centralelille.fr">lean_tech@centralelille.fr</a></p>
                         </li>
                         <li>
-                            <img class="centale_contact__img" src="{{ asset('assets/images/centrale-nobg.png') }} " alt="centrale">
+                            <img class="centrale_contact__img" src="{{ asset('assets/images/centrale-nobg.png') }} " alt="centrale">
                             <h5>Adresse</h5>
                             <p> 13 rue Jean Souvraz, 62300 Lens</p>
                             <p> +33 (0)3 21 74 85 85</p>
