--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -14,12 +14,13 @@
 
                 <hr>
                 <div class="actions button">
-                    <button onclick="location.href='#Projet';" class="ui projet__button button">Notre projet</button>
+                    <button onclick="scrollToId('#Projet')" class="ui projet__button button">Notre projet</button>
                     <button class="ui plaquette__button button">Notre maquette</button>
                 </div>
             </div>
             <div class="ui fluid borderless menu">
                 <a class="item menu__logo" onclick="scrollToId('#Accueil')"{#  data-tooltip="Accueil" data-position="bottom center"#}></a>
+                <a class="item menu__centrale" onclick="scrollToId('#Formation')"{#  data-tooltip="Accueil" data-position="bottom center"#}></a>
                 <div class="right menu">
                     <a class="item" onclick="scrollToId('#Accueil')">Accueil</a>
                     <a class="item" onclick="scrollToId('#Projet')">Le projet</a>
